--- a/components/accordion.html
+++ b/components/accordion.html
@@ -11,149 +11,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
 </head>
-<body class="bg-white dark:bg-slate-900">
+<body class="bg-white dark:bg-neutral-900">
     <!--Page title-->
     <h1 class="text-xs ml-4 mt-3 font-bold text-gray-700 dark:text-gray-400">OVERVIEW</h1>
     <h1 class="text-4xl ml-4 mt-0 font-bold dark:text-white">Accordions</h1>
 
     <!--Accordions-->
-    <div class="min-w-screen min-h-screen bg-white dark:bg-slate-900 flex items-center justify-center py-6 mx-4 my-2">
+    <div class="min-w-screen min-h-screen bg-white dark:bg-slate-900  py-6 mx-4 my-2">
         <div class="container">
             <!--Accordions-->
             <div class="card bg-slate-100 dark:bg-slate-800 py-3 px-5 rounded-xl flex flex-col mb-5">
                 <div class="title text-2xl font-bold mb-3 text-gray-800 dark:text-white">Accordions</div>
-	<div class="flex flex-col items-center">
-		<h2 class="font-bold text-5xl mt-5 dark:text-white">
-			Accordions
-		</h2>
-		<p class="text-gray-400 text-xl mt-3">
-			Lorem ipsum
-		</p>
-	</div>
-	<div class="grid divide-y divide-neutral-200 max-w-xl mx-auto mt-8">
-		<div class="py-5">
-			<details class="group">
-				<summary class="flex justify-between items-center font-medium cursor-pointer list-none">
-					<span class="text-yellow-400">Colored</span>
-					<span class="transition group-open:rotate-180">
-                <svg fill="none" height="24" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24" width="24"><path d="M6 9l6 6 6-6"></path>
-</svg>
-              </span>
-				</summary>
-				<p class="text-gray-400 mt-3 group-open:animate-fadeIn">
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi doloribus, dolor distinctio nihil ducimus perferendis nobis.
-                    Ad porro amet rerum excepturi explicabo, corporis fugiat pariatur debitis asperiores, totam quia repudiandae.
-				</p>
-			</details>
-		</div>
-		<div class="py-5">
-			<details class="group">
-				<summary class="flex justify-between items-center font-medium cursor-pointer list-none">
-					<span class="dark:text-white">Lorem ipsum</span>
-					<span class="transition group-open:rotate-180">
-                <svg fill="none" height="24" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24" width="24"><path d="M6 9l6 6 6-6"></path>
-</svg>
-              </span>
-				</summary>
-				<p class="text-gray-400 mt-3 group-open:animate-fadeIn">
-					Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Id, consequatur tenetur sequi non obcaecati ipsam temporibus vero ad libero autem officia modi ipsum velit repudiandae, ducimus vel tempore magnam. Qui.
-				</p>
-			</details>
-		</div>
-		<div class="py-5">
-			<details class="group">
-				<summary class="flex justify-between items-center font-medium cursor-pointer list-none">
-					<span class="dark:text-white">Lorem ipsum</span>
-					<span class="transition group-open:rotate-180">
-                <svg fill="none" height="24" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24" width="24"><path d="M6 9l6 6 6-6"></path>
-</svg>
-              </span>
-				</summary>
-				<p class="text-gray-400 mt-3 group-open:animate-fadeIn">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Voluptatibus ullam aperiam accusamus nesciunt inventore quia molestiae dolorum unde assumenda, maxime, deserunt provident necessitatibus at molestias repellendus quas. Quam, fugiat nobis?
-				</p>
-			</details>
-		</div>
-		<div class="py-5">
-			<details class="group">
-				<summary class="flex justify-between items-center font-medium cursor-pointer list-none">
-					<span class="dark:text-white">Lorem ipsum</span>
-					<span class="transition group-open:rotate-180">
-                <svg fill="none" height="24" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24" width="24"><path d="M6 9l6 6 6-6"></path>
-</svg>
-              </span>
-				</summary>
-				<p class="text-gray-400 mt-3 group-open:animate-fadeIn">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Sit blanditiis laborum facilis porro vitae, eos possimus itaque sequi quo at, voluptatem rem minus deleniti ipsa. Rem quo aut enim? Nostrum!
-				</p>
-			</details>
-		</div>
-		<div class="py-5">
-			<details class="group">
-				<summary class="flex justify-between items-center font-medium cursor-pointer list-none">
-					<span class="dark:text-white">Lorem ipsum</span>
-					<span class="transition group-open:rotate-180">
-                <svg fill="none" height="24" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24" width="24"><path d="M6 9l6 6 6-6"></path>
-</svg>
-              </span>
-				</summary>
-				<p class="text-gray-400 mt-3 group-open:animate-fadeIn">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. In hic aliquid aperiam optio dolore? 
-                    Praesentium aliquam quae voluptates alias corporis, est autem doloremque? Dolorem voluptatibus eveniet quo alias, quos voluptates.
-				</p>
-			</details>
-		</div>
-		<div class="py-5">
-			<details class="group">
-				<summary class="flex justify-between items-center font-medium cursor-pointer list-none">
-					<span class="dark:text-white">Lorem ipsum</span>
-					<span class="transition group-open:rotate-180">
-                <svg fill="none" height="24" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24" width="24"><path d="M6 9l6 6 6-6"></path>
-</svg>
-              </span>
-				</summary>
-				<p class="text-gray-400 mt-3 group-open:animate-fadeIn">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, similique!
-                    Labore perspiciatis laborum laudantium reprehenderit quo veritatis praesentium quibusdam pariatur expedita dolores consequuntur perferendis, eaque, culpa eos illum nihil? Sed.
-				</p>
-			</details>
-		</div>
-		<div class="py-5">
-			<details class="group">
-				<summary class="flex justify-between items-center font-medium cursor-pointer list-none">
-					<span class="dark:text-white">Lorem ipsum</span>
-					<span class="transition group-open:rotate-180">
-                <svg fill="none" height="24" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24" width="24"><path d="M6 9l6 6 6-6"></path>
-</svg>
-              </span>
-				</summary>
-				<p class="text-gray-400 mt-3 group-open:animate-fadeIn">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Neque nisi repellat magni enim quae ullam rerum, dolores illum similique accusamus? Magnam natus nemo rerum minus? Voluptatem sequi veritatis nulla a.
-				</p>
-			</details>
-		</div>
-
-		</div>
-	</div>
-</div>
-
-<script>
-	extend: {
-        keyframes: {
-            fadeIn: {
-            "0%": { opacity: 0 };
-            "100%": { opacity: 100 };
-        };
-      };
-        animation: {
-        fadeIn: "fadeIn 0.2s ease-in-out forwards",
-        };
-    };
-</script>
+	
 
             </div>
 
@@ -161,40 +30,55 @@
     </div>
 
 
+    <!--Empty Modal-->
+    <!--Overlay element-->
+    <div id="overlayEmpty" class="fixed hidden z-40 w-full h-full inset-0 backdrop-blur-md bg-opacity-60"></div>
+
+    <!--Modal Body-->
+    <div id="modalEmpty" class="text-center z-50 fixed hidden top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-slate-100 dark:bg-neutral-800 rounded-xl px-5 py-5 space-y-5 drop-shadow-lg">
+    <h1 class="text-2xl font-medium text-gray-600 dark:text-gray-400 ">Modal</h1>
+    <p class="text-sm text-gray-500 px-8">
+        There is nothing here yet...
+    </p>
+    <button id="closeEmpty"
+        class="bg-gray-500 px-5 py-2 text-sm shadow-lg font-medium tracking-wider text-white rounded-xl">
+        Cancel
+    </button>
+
+    </div>
 
 
-    <!--Footer Navigation Bar-->
-    <div class="w-full h-screen fixed">
-        <section id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow rounded-xl mx-3 my-2 backdrop-blur-lg">
+        <!--Bottom Navigation Bar-->
+        <div id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow rounded-xl mx-3 my-2 backdrop-blur-lg -translate-x-1/2">
             <div id="tabs" class="flex justify-between">
-                <a href="../index-components.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+                <a href="../index-components.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
                     <ion-icon name="extension-puzzle"></ion-icon>
                     <span class="tab tab-wigets block text-xs">Wigets</span>
                 </a>
-                <a href="../index-pages.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+                <a href="../index-pages.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
                     <ion-icon name="book"></ion-icon>
                     <span class="tab tab-pages block text-xs">Pages</span>
                 </a>
-                <a href="../index.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+                <a href="../index.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
                     <ion-icon name="home"></ion-icon>
                     <span class="tab tab-home block text-xs">Home</span>
                 </a>
-                <a href="#" onclick="openModal()"
-                class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+                <a href="#" id="openEmpty"
+                class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
                     <ion-icon name="contrast-sharp"></ion-icon>
                     <span class="tab tab-theme block text-xs">Theme</span>
                 </a>
-                <a href="../index-search.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+                <a href="../index-search.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
                     <ion-icon name="search"></ion-icon>
                     <span class="tab tab-search block text-xs">Search</span>
                 </a>
             </div>
-        </section>
-    </div>
+        </div>
 
 
     <!--IONICONS-->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script src="../js/modals.js"></script>
 </body>
 </html>
