--- a/components/alerts.html
+++ b/components/alerts.html
@@ -17,13 +17,12 @@
     <h1 class="text-4xl ml-4 mt-0 font-bold dark:text-white">Alerts</h1>
 
     <!--Alerts-->
-    <div class="bg-white dark:bg-neutral-900 flex items-center justify-center py-6 mx-4 my-2">
-        <div class="container">
+    <div class="bg-white dark:bg-neutral-900 py-6 mx-4 my-2">
 
             <!--Split alerts-->
             <div class="card bg-slate-100 dark:bg-neutral-800 py-3 px-5 rounded-xl flex flex-col mb-5">
-                <div class="title text-2xl font-bold mb-3 text-gray-800 dark:text-white">Split alerts</div>
-                    <!--Blue-->
+                <div class="title text-2xl font-bold mb-3 text-gray-800 dark:text-white">Alerts with dividers</div>
+
                     <div class="w-full">
                     <div class="py-3 px-5 mb-4 bg-blue-100 text-blue-900 text-sm rounded-md" role="alert">
                         <p class="border-b-2 border-blue-300">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, labore.</p>
@@ -76,37 +75,37 @@
                     <!--Blue-->
                 <div class="w-full">
                     <div class="py-3 px-5 mb-4 bg-blue-100 text-blue-900 text-sm rounded-md border-l-4 border-blue-400" role="alert">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, labore. Porro, ipsa fugiat qui eos exercitationem ea soluta quam, iusto, ipsum voluptates quod doloremque!
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, labore.
                     </div>
 
                     <!--Gray-->
                     <div class="py-3 px-5 mb-4 bg-gray-100 text-gray-900 rounded-md text-sm border-l-4 border-gray-400" role="alert">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, labore. Porro, ipsa fugiat qui eos exercitationem ea soluta quam, iusto, ipsum voluptates quod doloremque!
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, labore.
                     </div>
 
                     <!--Green-->
                     <div class="py-3 px-5 mb-4 bg-green-100 text-green-900 text-sm rounded-md border-l-4 border-green-400" role="alert">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, labore. Porro, ipsa fugiat qui eos exercitationem ea soluta quam, iusto, ipsum voluptates quod doloremque!
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, labore.
                     </div>
 
                     <!--Red-->
                     <div class="py-3 px-5 mb-4 bg-red-100 text-red-900 text-sm rounded-md border-l-4 border-red-400" role="alert">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, labore. Porro, ipsa fugiat qui eos exercitationem ea soluta quam, iusto, ipsum voluptates quod doloremque!
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, labore.
                     </div>
 
                     <!--Yellow-->
                     <div class="py-3 px-5 mb-4 bg-yellow-100 text-yellow-900 text-sm rounded-md border-l-4 border-yellow-400" role="alert">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, labore. Porro, ipsa fugiat qui eos exercitationem ea soluta quam, iusto, ipsum voluptates quod doloremque!
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, labore.
                     </div>
 
                     <!--Purple-->
                     <div class="py-3 px-5 mb-4 bg-purple-100 text-purple-900 text-sm rounded-md border-l-4 border-purple-400" role="alert">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, labore. Porro, ipsa fugiat qui eos exercitationem ea soluta quam, iusto, ipsum voluptates quod doloremque!
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, labore.
                     </div>
 
                     <!--Dark-->
                     <div class="py-3 px-5 mb-4 bg-gray-600 text-gray-900 rounded-md text-sm border-l-4 border-gray-900" role="alert">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, labore. Porro, ipsa fugiat qui eos exercitationem ea soluta quam, iusto, ipsum voluptates quod doloremque!
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, labore.
                     </div>
 
                 </div>
@@ -294,12 +293,30 @@
                 </div>
             </div>
 
-        </div>
+
     </div>
     
-    <!--Footer Navigation Bar-->
-    <div class="w-full h-screen fixed">
-        <section id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow rounded-xl mx-3 my-2 backdrop-blur-lg">
+
+    <!--Empty Modal-->
+    <!--Overlay element-->
+    <div id="overlayEmpty" class="fixed hidden z-40 w-full h-full inset-0 backdrop-blur-md bg-opacity-60"></div>
+
+    <!--Modal Body-->
+    <div id="modalEmpty" class="text-center z-50 fixed hidden top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-slate-100 dark:bg-neutral-800 rounded-xl px-5 py-5 space-y-5 drop-shadow-lg">
+    <h1 class="text-2xl font-medium text-gray-600 dark:text-gray-400 ">Modal</h1>
+    <p class="text-sm text-gray-500 px-8">
+        There is nothing here yet...
+    </p>
+    <button id="closeEmpty"
+        class="bg-gray-500 px-5 py-2 text-sm shadow-lg font-medium tracking-wider text-white rounded-xl">
+        Cancel
+    </button>
+
+    </div>
+
+
+        <!--Bottom Navigation Bar-->
+        <div id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow rounded-xl mx-3 my-2 backdrop-blur-lg">
             <div id="tabs" class="flex justify-between">
             <!--Wigets-->
             <a href="../index-components.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
@@ -320,7 +337,7 @@
             </a>
     
             <!--Theme Modal Window-->
-            <a href="#" @click="modelOpen =!modelOpen"
+            <a href="#" id="openEmpty"
             class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
                 <ion-icon name="contrast-sharp"></ion-icon>
                 <span class="tab tab-theme block text-xs">Theme</span>
@@ -332,10 +349,11 @@
                 <span class="tab tab-search block text-xs">Search</span>
             </a>
             </div>
-        </section>
-    </div>
+        </div>
+
     <!--IONICONS-->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script src="../js/modals.js"></script>
 </body>
 </html>
