--- a/components/buttons.html
+++ b/components/buttons.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pages</title>
+    <title>Buttons</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="src/input.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +17,7 @@
     <h1 class="text-4xl ml-4 mt-0 font-bold dark:text-white">Buttons</h1>
 
     <!--Buttons-->
-    <div class="min-w-screen min-h-screen bg-white dark:bg-neutral-900 flex items-center justify-center py-6 mx-4 my-2">
+    <div class="min-w-screen min-h-screen bg-white dark:bg-neutral-900 flex py-6 mx-4 my-2">
         <div class="container">
             <!--Basic buttons-->
             <div class="card bg-slate-100 dark:bg-neutral-800 py-3 px-5 rounded-xl flex flex-col mb-5">
@@ -135,40 +135,56 @@
     </div>
 
 
+    <!--Empty Modal-->
+    <!--Overlay element-->
+    <div id="overlayEmpty" class="fixed hidden z-40 w-full h-full inset-0 backdrop-blur-md bg-opacity-60"></div>
+
+    <!--Modal Body-->
+    <div id="modalEmpty" class="text-center z-50 fixed hidden top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-slate-100 dark:bg-neutral-800 rounded-xl px-5 py-5 space-y-5 drop-shadow-lg">
+    <h1 class="text-2xl font-medium text-gray-600 dark:text-gray-400 ">Modal</h1>
+    <p class="text-sm text-gray-500 px-8">
+        There is nothing here yet...
+    </p>
+    <button id="closeEmpty"
+        class="bg-gray-500 px-5 py-2 text-sm shadow-lg font-medium tracking-wider text-white rounded-xl">
+        Cancel
+    </button>
+
+    </div>
 
 
     <!--Footer Navigation Bar-->
-    <div class="w-full h-screen fixed">
-        <section id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow rounded-xl mx-3 my-2 backdrop-blur-lg">
+        <div id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow rounded-xl mx-3 my-2 backdrop-blur-lg">
             <div id="tabs" class="flex justify-between">
-                <a href="../index-components.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+                <a href="../index-components.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
                     <ion-icon name="extension-puzzle"></ion-icon>
                     <span class="tab tab-wigets block text-xs">Wigets</span>
                 </a>
-                <a href="../index-pages.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+                <a href="../index-pages.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
                     <ion-icon name="book"></ion-icon>
                     <span class="tab tab-pages block text-xs">Pages</span>
                 </a>
-                <a href="../index.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+                <a href="../index.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
                     <ion-icon name="home"></ion-icon>
                     <span class="tab tab-home block text-xs">Home</span>
                 </a>
-                <a href="#" onclick="openModal()"
-                class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+                <a href="#" id="openEmpty"
+                class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
                     <ion-icon name="contrast-sharp"></ion-icon>
                     <span class="tab tab-theme block text-xs">Theme</span>
                 </a>
-                <a href="../index-search.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+                <a href="../index-search.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
                     <ion-icon name="search"></ion-icon>
                     <span class="tab tab-search block text-xs">Search</span>
                 </a>
             </div>
-        </section>
-    </div>
+        </div>
+
 
 
     <!--IONICONS-->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script src="../js/modals.js"></script>
 </body>
 </html>
