--- a/components/cards.html
+++ b/components/cards.html
@@ -210,11 +210,27 @@
   </div>
 
 
+  <!--Empty Modal-->
+    <!--Overlay element-->
+    <div id="overlayEmpty" class="fixed hidden z-40 w-full h-full inset-0 backdrop-blur-md bg-opacity-60"></div>
+
+    <!--Modal Body-->
+    <div id="modalEmpty" class="text-center z-50 fixed hidden top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-slate-100 dark:bg-neutral-800 rounded-xl px-5 py-5 space-y-5 drop-shadow-lg">
+    <h1 class="text-2xl font-medium text-gray-600 dark:text-gray-400 ">Modal</h1>
+    <p class="text-sm text-gray-500 px-8">
+        There is nothing here yet...
+    </p>
+    <button id="closeEmpty"
+        class="bg-gray-500 px-5 py-2 text-sm shadow-lg font-medium tracking-wider text-white rounded-xl">
+        Cancel
+    </button>
+
+    </div>
 
 
   <!--Footer Navigation Bar-->
-  <div class="w-full h-screen fixed">
-    <section id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow rounded-xl mx-3 my-2 backdrop-blur-lg">
+
+    <div id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow rounded-xl mx-3 my-2 backdrop-blur-lg">
       <div id="tabs" class="flex justify-between">
         <!--Wigets-->
         <a href="../index-components.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
@@ -235,7 +251,7 @@
         </a>
 
         <!--Theme Modal Window-->
-        <a href="#" @click="modelOpen =!modelOpen"
+        <a href="#" id="openEmpty"
         class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
           <ion-icon name="contrast-sharp"></ion-icon>
           <span class="tab tab-theme block text-xs">Theme</span>
@@ -247,12 +263,13 @@
           <span class="tab tab-search block text-xs">Search</span>
         </a>
       </div>
-    </section>
-  </div>
+    </div>
+
 
 
   <!--IONICONS-->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+  <script src="../js/modals.js"></script>
 </body>
 </html>
