--- a/components/charts.html
+++ b/components/charts.html
@@ -29,35 +29,7 @@
                   <!-- Chart.js -->
                   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
                   
-                  <!--Pie Chart-->
-                  <script>
-                    const dataPie = {
-                      labels: ["Data-1", "Data-2", "Data-3"],
-                      datasets: [
-                        {
-                          label: "Some Data",
-                          data: [300, 80, 100],
-                          backgroundColor: [
-                            "rgb(66, 135, 245)",
-                            "rgb(108, 160, 245)",
-                            "rgb(101, 143, 241)",
-                          ],
-                          hoverOffset: 4,
-                        },
-                      ],
-                    };
                   
-                    const configPie = {
-                      type: "pie",
-                      data: dataPie,
-                      options: {},
-                    };
-                  
-                    var chartBar = new Chart(
-                      document.getElementById("chartPie"),
-                      configPie
-                    );
-                  </script>
             </div>
 
             <!--Bar Chart-->
@@ -68,39 +40,7 @@
                   <!--Chart.js -->
                   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
                   
-                  <!--Bar Chart-->
-                  <script>
-                    const labelsBarChart = [
-                      "January",
-                      "February",
-                      "March",
-                      "April",
-                      "May",
-                      "June",
-                    ];
-                    const dataBarChart = {
-                      labels: labelsBarChart,
-                      datasets: [
-                        {
-                          label: "Some Data",
-                          backgroundColor: "hsl(217, 57%, 51%)",
-                          borderColor: "hsl(217, 57%, 51%)",
-                          data: [10, 20, 30, 100, 50, 30, 45],
-                        },
-                      ],
-                    };
-                  
-                    const configBarChart = {
-                      type: "bar",
-                      data: dataBarChart,
-                      options: {},
-                    };
-                  
-                    var chartBar = new Chart(
-                      document.getElementById("chartBar"),
-                      configBarChart
-                    );
-                  </script>
+
             </div>
 
             <!--Line Chart-->
@@ -113,32 +53,7 @@
                   <!--Chart.js -->
                   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
                   
-                  <!--Line Chart-->
-                  <script>
-                    const labels = ["January", "February", "March", "April", "May", "June"];
-                    const data = {
-                      labels: labels,
-                      datasets: [
-                        {
-                          label: "Some Data",
-                          backgroundColor: "hsl(217, 57%, 51%)",
-                          borderColor: "hsl(217, 57%, 51%)",
-                          data: [5, 150, 5, 200, 20, 30, 300],
-                        },
-                      ],
-                    };
                   
-                    const configLineChart = {
-                      type: "line",
-                      data,
-                      options: {},
-                    };
-                  
-                    var chartLine = new Chart(
-                      document.getElementById("chartLine"),
-                      configLineChart
-                    );
-                  </script>
             </div>
 
             <!--Web Chart-->
@@ -148,97 +63,66 @@
                     <canvas class="p-0" id="chartRadar"></canvas>
                   </div>
                   
-                  <!-- Required chart.js -->
+                  <!--Chart.js-->
                   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
                   
-                  <!-- Chart radar -->
-                  <script>
-                    const dataRadar = {
-                      labels: [
-                        "1",
-                        "2",
-                        "3",
-                        "4",
-                        "1",
-                        "2",
-                        "3",
-                      ],
-                      datasets: [
-                        {
-                          label: "Some Data-1",
-                          data: [65, 59, 90, 81, 56, 55, 40],
-                          fill: true,
-                          backgroundColor: "rgba(133, 105, 241, 0.2)",
-                          borderColor: "rgb(133, 105, 241)",
-                          pointBackgroundColor: "rgb(133, 105, 241)",
-                          pointBorderColor: "#fff",
-                          pointHoverBackgroundColor: "#fff",
-                          pointHoverBorderColor: "rgb(133, 105, 241)",
-                        },
-                        {
-                          label: "Some Data-2",
-                          data: [44, 30, 50, 67, 96, 27, 115],
-                          fill: true,
-                          backgroundColor: "rgba(54, 162, 235, 0.2)",
-                          borderColor: "rgb(54, 162, 235)",
-                          pointBackgroundColor: "rgb(54, 162, 235)",
-                          pointBorderColor: "#fff",
-                          pointHoverBackgroundColor: "#fff",
-                          pointHoverBorderColor: "rgb(54, 162, 235)",
-                        },
-                      ],
-                    };
-                  
-                    const configRadarChart = {
-                      type: "radar",
-                      data: dataRadar,
-                      options: {},
-                    };
-                  
-                    var chartBar = new Chart(
-                      document.getElementById("chartRadar"),
-                      configRadarChart
-                    );
-                  </script>
+
             </div> 
         </div>
     </div>
 
 
+    <!--Empty Modal-->
+    <!--Overlay element-->
+    <div id="overlayEmpty" class="fixed hidden z-40 w-full h-full inset-0 backdrop-blur-md bg-opacity-60"></div>
+
+    <!--Modal Body-->
+    <div id="modalEmpty" class="text-center z-50 fixed hidden top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-slate-100 dark:bg-neutral-800 rounded-xl px-5 py-5 space-y-5 drop-shadow-lg">
+    <h1 class="text-2xl font-medium text-gray-600 dark:text-gray-400 ">Modal</h1>
+    <p class="text-sm text-gray-500 px-8">
+        There is nothing here yet...
+    </p>
+    <button id="closeEmpty"
+        class="bg-gray-500 px-5 py-2 text-sm shadow-lg font-medium tracking-wider text-white rounded-xl">
+        Cancel
+    </button>
+
+    </div>
 
 
-    <!--Footer Navigation Bar-->
-    <div class="w-full h-screen fixed">
-        <section id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow rounded-xl mx-3 my-2 backdrop-blur-lg">
+        <!--Bottom Navigation Bar-->
+        <div id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow rounded-xl mx-3 my-2 backdrop-blur-lg">
             <div id="tabs" class="flex justify-between">
-                <a href="../index-components.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+                <a href="../index-components.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
                     <ion-icon name="extension-puzzle"></ion-icon>
                     <span class="tab tab-wigets block text-xs">Wigets</span>
                 </a>
-                <a href="../index-pages.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+                <a href="../index-pages.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
                     <ion-icon name="book"></ion-icon>
                     <span class="tab tab-pages block text-xs">Pages</span>
                 </a>
-                <a href="../index.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+                <a href="../index.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
                     <ion-icon name="home"></ion-icon>
                     <span class="tab tab-home block text-xs">Home</span>
                 </a>
-                <a href="#" onclick="openModal()"
-                class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+                <a href="#" id="openEmpty"
+                class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
                     <ion-icon name="contrast-sharp"></ion-icon>
                     <span class="tab tab-theme block text-xs">Theme</span>
                 </a>
-                <a href="../index-search.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+                <a href="../index-search.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
                     <ion-icon name="search"></ion-icon>
                     <span class="tab tab-search block text-xs">Search</span>
                 </a>
             </div>
-        </section>
-    </div>
+          </div>
+
 
 
     <!--IONICONS-->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script src="../js/charts.js"></script>
+    <script src="../js/modals.js"></script>
 </body>
 </html>
