--- a/components/upload-flies.html
+++ b/components/upload-flies.html
@@ -38,7 +38,7 @@
                 <span>Drag and drop your</span>&nbsp;<span>files or</span>
               </p>
               <input id="hidden-input" type="file" multiple class="hidden" />
-              <button id="button" class="mt-2 rounded-xl px-3 py-1 bg-blue-400 hover:bg-yellow-600 focus:shadow-outline focus:outline-none text-gray-100 font-bold">
+              <button id="button" class="mt-2 rounded-xl px-3 py-1 bg-blue-400 hover:bg-blue-600 focus:shadow-outline focus:outline-none text-gray-100 font-bold">
                 Upload a file
               </button>
             </header>
@@ -126,125 +126,7 @@
     </li>
   </template>
 
-<script>
-const fileTempl = document.getElementById("file-template"),
-imageTempl = document.getElementById("image-template"),
-empty = document.getElementById("empty");
 
-// use to store pre selected files
-let FILES = {};
-
-// check if file is of type image and prepend the initialied
-// template to the target element
-function addFile(target, file) {
-const isImage = file.type.match("image.*"),
-  objectURL = URL.createObjectURL(file);
-
-const clone = isImage
-  ? imageTempl.content.cloneNode(true)
-  : fileTempl.content.cloneNode(true);
-
-clone.querySelector("h1").textContent = file.name;
-clone.querySelector("li").id = objectURL;
-clone.querySelector(".delete").dataset.target = objectURL;
-clone.querySelector(".size").textContent =
-  file.size > 1024
-    ? file.size > 1048576
-      ? Math.round(file.size / 1048576) + "mb"
-      : Math.round(file.size / 1024) + "kb"
-    : file.size + "b";
-
-isImage &&
-  Object.assign(clone.querySelector("img"), {
-    src: objectURL,
-    alt: file.name
-  });
-
-empty.classList.add("hidden");
-target.prepend(clone);
-
-FILES[objectURL] = file;
-}
-
-const gallery = document.getElementById("gallery"),
-overlay = document.getElementById("overlay");
-
-// click the hidden input of type file if the visible button is clicked
-// and capture the selected files
-const hidden = document.getElementById("hidden-input");
-document.getElementById("button").onclick = () => hidden.click();
-hidden.onchange = (e) => {
-for (const file of e.target.files) {
-  addFile(gallery, file);
-}
-};
-
-// use to check if a file is being dragged
-const hasFiles = ({ dataTransfer: { types = [] } }) =>
-types.indexOf("Files") > -1;
-
-// use to drag dragenter and dragleave events.
-// this is to know if the outermost parent is dragged over
-// without issues due to drag events on its children
-let counter = 0;
-
-// reset counter and append file to gallery when file is dropped
-function dropHandler(ev) {
-ev.preventDefault();
-for (const file of ev.dataTransfer.files) {
-  addFile(gallery, file);
-  overlay.classList.remove("draggedover");
-  counter = 0;
-}
-}
-
-// only react to actual files being dragged
-function dragEnterHandler(e) {
-e.preventDefault();
-if (!hasFiles(e)) {
-  return;
-}
-++counter && overlay.classList.add("draggedover");
-}
-
-function dragLeaveHandler(e) {
-1 > --counter && overlay.classList.remove("draggedover");
-}
-
-function dragOverHandler(e) {
-if (hasFiles(e)) {
-  e.preventDefault();
-}
-}
-
-// event delegation to caputre delete events
-// fron the waste buckets in the file preview cards
-gallery.onclick = ({ target }) => {
-if (target.classList.contains("delete")) {
-  const ou = target.dataset.target;
-  document.getElementById(ou).remove(ou);
-  gallery.children.length === 1 && empty.classList.remove("hidden");
-  delete FILES[ou];
-}
-};
-
-// print all selected files
-document.getElementById("submit").onclick = () => {
-alert(`Submitted Files:\n${JSON.stringify(FILES)}`);
-console.log(FILES);
-};
-
-// clear entire selection
-document.getElementById("cancel").onclick = () => {
-while (gallery.children.length > 0) {
-  gallery.lastChild.remove();
-}
-FILES = {};
-empty.classList.remove("hidden");
-gallery.append(empty);
-};
-
-</script>
 
 <style>
 .hasImage:hover section {
@@ -276,38 +158,55 @@ color: #2b6cb0;
     </div>
 
 
+    <!--Empty Modal-->
+    <!--Overlay element-->
+    <div id="overlayEmpty" class="fixed hidden z-40 w-full h-full inset-0 backdrop-blur-md bg-opacity-60"></div>
+
+    <!--Modal Body-->
+    <div id="modalEmpty" class="text-center z-50 fixed hidden top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-slate-100 dark:bg-neutral-800 rounded-xl px-5 py-5 space-y-5 drop-shadow-lg">
+    <h1 class="text-2xl font-medium text-gray-600 dark:text-gray-400 ">Modal</h1>
+    <p class="text-sm text-gray-500 px-8">
+        There is nothing here yet...
+    </p>
+    <button id="closeEmpty"
+        class="bg-gray-500 px-5 py-2 text-sm shadow-lg font-medium tracking-wider text-white rounded-xl">
+        Cancel
+    </button>
+
+    </div>
+
 
     <!--Footer Navigation Bar-->
-    <div class="w-full h-screen fixed">
-        <section id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow rounded-xl mx-3 my-2 backdrop-blur-lg">
+        <div id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow rounded-xl mx-3 my-2 backdrop-blur-lg">
             <div id="tabs" class="flex justify-between">
-                <a href="../index-components.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+                <a href="../index-components.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
                     <ion-icon name="extension-puzzle"></ion-icon>
                     <span class="tab tab-wigets block text-xs">Wigets</span>
                 </a>
-                <a href="../index-pages.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+                <a href="../index-pages.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
                     <ion-icon name="book"></ion-icon>
                     <span class="tab tab-pages block text-xs">Pages</span>
                 </a>
-                <a href="../index.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+                <a href="../index.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
                     <ion-icon name="home"></ion-icon>
                     <span class="tab tab-home block text-xs">Home</span>
                 </a>
-                <a href="#" onclick="openModal()"
-                class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+                <a href="#" id="openEmpty"
+                class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
                     <ion-icon name="contrast-sharp"></ion-icon>
                     <span class="tab tab-theme block text-xs">Theme</span>
                 </a>
-                <a href="../index-search.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
+                <a href="../index-search.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
                     <ion-icon name="search"></ion-icon>
                     <span class="tab tab-search block text-xs">Search</span>
                 </a>
             </div>
-        </section>
-    </div>
+        </div>
+
 
     <!--IONICONS-->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script src="../js/upload-files.js"></script>
 </body>
 </html>
